--- a/.gitattributes
+++ b/.gitattributes
@@ -12,6 +12,7 @@
 *.ttf filter=lfs diff=lfs merge=lfs -text
 *.json filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
+*.bat filter=lfs diff=lfs merge=lfs -text
 *.bat !text !filter !merge !diff
 *.gitignore !text !filter !merge !diff
 *.gitattributes !text !filter !merge !diff
