--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.vvd filter=lfs diff=lfs merge=lfs -text
 *.phy filter=lfs diff=lfs merge=lfs -text
 *.vtx filter=lfs diff=lfs merge=lfs -text
+*.mdl filter=lfs diff=lfs merge=lfs -text
