--- a/.gitattributes
+++ b/.gitattributes
@@ -13,6 +13,7 @@
 *.json filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.bat filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
 *.bat !text !filter !merge !diff
 *.gitignore !text !filter !merge !diff
 *.gitattributes !text !filter !merge !diff
